fixed paths for main.haandlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">	
-		<link rel="stylesheet" href="../../public/stylesheets/style.css" type="text/css" />
+		<link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
 		<title>Paranormal Activity Reporter</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="../../public/js/members.js"></script>
+		<script src="/js/members.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
