--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -60,7 +60,8 @@
         <option>Lizard People</option>
       </select>
     </div>
-    <textarea class="textarea" id="inputText" placeholder="e.g. Hello world"></textarea>
+    <input class="input" type="text" id="titleText" placeholder="Title">
+    <textarea class="textarea" id="inputText" placeholder="e.g. Why to never run out of tin foil..."></textarea>
     <button class="button is-warning" id="submitBtn">Create Report!</button>
   </form>
   <div class="column is-half reports">
