took away authors

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -46,7 +46,7 @@
     </ul>
   </div>
 
-  <div class="column is-half reports">
+  <div class="column is-three-quarter reports">
     <h2>Report Paranormal Activity Here!</h2>
     <form class="create-form">
       <div class="select">
@@ -88,15 +88,6 @@
         </p>
       </div>
     </div>
-  </div>
-  <div class="column is-one-quarter author-list">
-    <ul>Top Authors
-      <li>James Dobbe</li>
-      <li>Natasha Wolfe</li>
-      <li>Bobby Oldani</li>
-      <li>David Shur</li>
-      <li>Dawson Hens</li>
-    </ul>
   </div>
 </div>
 </div><br><br>
