--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
 		<title>Paranormal Activity Reporter</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/js/members.js"></script>
+		<script src="/js/create_post.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
