changed the ids to match the handlebar.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,8 +49,7 @@
     <h2>Report Paranormal Activity Here!</h2>
     <form class="create-form">
       <div class="select">
-        <select>
-          <option>Select Category</option>
+        <select id="select-category">
           <option>General</option>
           <option>Sasquatch</option>
           <option>Chem Trails</option>
