adding create post

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,7 +49,7 @@
     <h2>Report Paranormal Activity Here!</h2>
     <form class="create-form">
       <div class="select">
-        <select>
+        <select id="select-category">
           <option>Select Category</option>
           <option>General</option>
           <option>Sasquatch</option>
