css and index changes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,14 +10,6 @@
         </div>
     </div>
 </nav>
-{{!-- <div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <h2>Welcome </h2>
-        </div>
-    </div>
-</div> --}}
-
 <section class="section">
     <div class="container">
         <h1 class="title header">
@@ -49,6 +41,25 @@
         </ul>
     </div>
     <div class="column is-three-quarter reports">
+        <h2>Report Paranormal Activity Here!</h2>
+        <form class="create-form">
+      <div class="select">
+        <select>
+          <option>Select Category</option>
+          <option>General</option>
+          <option>Sasquatch</option>
+          <option>Chem Trails</option>
+          <option>Abductions</option>
+          <option>UFO's</option>
+          <option>Flat Earth</option>
+          <option>Hauntings</option>
+          <option>Lizard People</option>
+        </select>
+      </div>
+      <input class="input" type="text" id="titleText" placeholder="Title">
+      <textarea class="textarea" id="inputText" placeholder="e.g. Why to never run out of tin foil..."></textarea>
+      <button class="button is-warning" id="submitBtn">Create Report!</button>
+    </form>
         <ul>Reports
             <li>
                 <div class="card">
@@ -78,15 +89,6 @@
             </li>
         </ul>
     </div>
-    {{!-- <div class="column is-one-quarter author-list">
-                <ul>Top Authors
-                    <li>James Dobbe</li>
-                    <li>Natasha Wolfe</li>
-                    <li>Bobby Oldani</li>
-                    <li>David Shur</li>
-                    <li>Dawson Hens</li>
-                </ul>
-            </div> --}}
 </div>
 </div>
 <br><br><hr><br><br>
