new posts now post correctly and get stored in db, then rendered to page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -44,7 +44,7 @@
         <h2>Report Paranormal Activity Here!</h2>
         <form class="create-form">
       <div class="select">
-        <select>
+        <select id="post-category">
           <option>Select Category</option>
           <option>General</option>
           <option>Sasquatch</option>
