added body to post cards

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -75,6 +75,7 @@
       <div class="card post">
         <div class="card-content">
           <p class="title">{{dataValues.title}}</p>
+          <p class="subtitle">{{dataValues.body}}</p>
           <p class="subtitle">{{dataValues.author}}</p>
         </div>
       </div>
