add limit to textarea

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -67,7 +67,7 @@
         </select>
       </div>
       <input class="input card" type="text" id="titleText" placeholder="Title">
-      <textarea class="textarea card" id="inputText" placeholder="e.g. Why to never run out of tin foil..."></textarea>
+      <textarea class="textarea card" id="inputText" maxlength="255" placeholder="e.g. Why to never run out of tin foil..."></textarea>
       <button class="button is-warning card" id="submitBtn">Create Report!</button>
     </form>
     <p>Reports</p>
