final design for posted in category and username in post card

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -73,7 +73,7 @@
         <div class="card-content">
           <p class="title">{{dataValues.title}}</p>
           <p class="subtitle">{{dataValues.body}}</p>
-          <p class="subtitle">{{dataValues.author}}</p>
+          <p class="subtitle">Posted in: <strong>{{dataValues.category}}</strong> by <strong>{{dataValues.author}}</strong></p>
         </div>
       </div>
     {{/each}}
