--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,9 +12,6 @@
 </nav>
 <section class="section">
     <div class="container">
-        <h1 class="title header">
-            P.A.R.
-        </h1>
         <div class="row">
             <div class="column-top">
                 <img class="image" id="header-sides" src="/assets/noProbePlease.png" alt="abduct">
@@ -41,16 +38,22 @@
         </div>
     </div>
 </section>
-<div class="columns">
-    <div class="column is-one-quarter cat-list">
-        <ul>Categories
-            <li>Aliens</li>
-            <li>Sasquatch</li>
-            <li>Abductions</li>
-            <li>Conspiracy</li>
-        </ul>
-    </div>
-    <div class="column is-three-quarter reports">
+
+<nav class="breadcrumb has-bullet-separator is-centered" aria-label="breadcrumbs">
+  <ul>
+    <li><a class="categoryBtn" href="#"><strong>P.A.R.</strong></a></li>
+    <li><a class="categoryBtn" href="#">General</a></li>
+    <li><a class="categoryBtn" href="#">Sasquatch</a></li>
+    <li><a class="categoryBtn" href="#">Chem Trails</a></li>
+    <li><a class="categoryBtn" href="#">Abductions</a></li>
+    <li><a class="categoryBtn" href="#">UFO's</a></li>
+    <li><a class="categoryBtn" href="#">Flat Earth</a></li>
+    <li><a class="categoryBtn" href="#">Hauntings</a></li>
+    <li><a class="categoryBtn" href="#">Lizard People</a></li>
+  </ul>
+</nav>
+<hr>
+    <div class="column is-full">
         <h2>Report Paranormal Activity Here!</h2>
         <form class="create-form">
       <div class="select card">
@@ -84,6 +87,7 @@
 </div>
 </div>
 <br><br><hr><br><br>
+<div class="lower-area">
 <!-- alien -->
 <div class="ufo">
     <div class="monster" style="color: #7cb342">
@@ -109,5 +113,6 @@
             <span></span>
         </div>
     </div>
+</div>
 </div>
 <br><br><br>
