--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,9 +6,10 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
 		<link rel="stylesheet" href="stylesheets/style.css" type="text/css" />
 		<title>Paranormal Activity Reporter</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/js/members.js"></script>
+     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 		
+	 	<script src="/js/members.js"></script>
 		<script src="/js/create_post.js"></script>
+		<script src="/js/filterByCategory.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
