add routes for the handlebars route

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,10 +41,10 @@
 <div class="columns">
     <div class="column is-one-quarter cat-list">
         <ul>Categories
-            <li>Aliens</li>
-            <li>Sasquatch</li>
-            <li>Abductions</li>
-            <li>Conspiracy</li>
+            <li><a href='/members/Aliens'>Aliens</a></li>
+            <li><a href='/members/Sasquatch'>Sasquatch</a></li>
+            <li><a href='/members/Abductions'>Abductions</a></li>
+            <li><a href='/members/Conspiracy'>Conspiracy</a></li>
         </ul>
         <!-- © wdisseny -->
         <div id="contain_moon" style="text-align:center;padding-top:5px;padding-bottom:5px;">
