--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,14 +43,14 @@
   <ul>
       {{!-- need correct href links inserted here --}}
     <li><a class="categoryBtn" href="#"><strong>P.A.R.</strong></a></li>
-    <li><a class="categoryBtn" href="/members/Genreal">General</a></li>
+    <li><a class="categoryBtn" href="/members/General">General</a></li>
     <li><a class="categoryBtn" href="/members/Sasquatch">Sasquatch</a></li>
-    <li><a class="categoryBtn" href="">Chem Trails</a></li>
-    <li><a class="categoryBtn" href="#">Abductions</a></li>
-    <li><a class="categoryBtn" href="#">UFO's</a></li>
-    <li><a class="categoryBtn" href="#">Flat Earth</a></li>
-    <li><a class="categoryBtn" href="#">Hauntings</a></li>
-    <li><a class="categoryBtn" href="#">Lizard People</a></li>
+    <li><a class="categoryBtn" href="/members/Chem Trails">Chem Trails</a></li>
+    <li><a class="categoryBtn" href="/members/Abductions">Abductions</a></li>
+    <li><a class="categoryBtn" href="/members/UFO's">UFO's</a></li>
+    <li><a class="categoryBtn" href="/members/Flat Earth">Flat Earth</a></li>
+    <li><a class="categoryBtn" href="/members/Hauntings">Hauntings</a></li>
+    <li><a class="categoryBtn" href="/members/Lizard People">Lizard People</a></li>
   </ul>
 </nav>
 <!-- © wdisseny -->
