fixed PAR link, touched up spacing on navbar margins

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,7 +42,7 @@
 <nav class="breadcrumb has-bullet-separator is-centered" aria-label="breadcrumbs">
   <ul>
       {{!-- need correct href links inserted here --}}
-    <li><a class="categoryBtn" href="#"><strong>P.A.R.</strong></a></li>
+    <li><a class="categoryBtn" href="/members"><strong>P.A.R.</strong></a></li>
     <li><a class="categoryBtn" href="/members/General">General</a></li>
     <li><a class="categoryBtn" href="/members/Sasquatch">Sasquatch</a></li>
     <li><a class="categoryBtn" href="/members/Chem Trails">Chem Trails</a></li>
